# nasa_exoplanets_classification

./: .gitignore  cumulative.ipynb  k2.ipynb  pyproject.toml  ruff.toml  toi.ipynb
app/: constants.py  main.py  utils.py
jupyter/: cumulative.ipynb  k2.ipynb  toi.ipynb
jupyter/models/: rf_cumulative.pkl
